@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.2.16
+VERSION=1.3.0
 
-DEPENDENCY="zeda=1.2.20;zm=1.2.35"
+DEPENDENCY="zeda=1.4.0;zm=1.2.35"
