@@ -1,8 +1,0 @@
-a: 3, 3 (
- 0, 1, 0,
- 0, 0, 1,
--2,-3,-4
-)
-b: 3 ( 0, 0, 1 )
-c: 3 ( 1, 0, 0 )
-d: 1
